updated register view overflow issue

--- a/public/css/regstyle.css
+++ b/public/css/regstyle.css
@@ -31,7 +31,6 @@ body{
 }
 
 .regleft{
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
